--- a/src/html/strongstart-public-site.html
+++ b/src/html/strongstart-public-site.html
@@ -2,11 +2,10 @@
 <html lang="en">
 
 <head>
-  {{> partials/head title="Services"}}
+  {{> partials/head title="StrongStart DAO Public Site"}}
 </head>
 
 <body>
-
 
   <!-- navbar -->
   {{> navbar/navbar
@@ -16,13 +15,12 @@
   button="btn-outline-white"
   }}
 
-
   <!-- steps -->
   <section class="py-15 py-xl-20 bg-black inverted overflow-hidden">
     <div class="container mt-10 level-3">
       <div class="row mb-md-10">
         <div class="col-md-10 col-lg-8">
-          <h1 class="display-2 font-weight-bold">Passion combined with experience.</h1>
+          <h1 class="display-2 font-weight-bold">The future of blockchain is here.</h1>
         </div>
       </div>
       <div class="row g-3 g-xl-5">
